# traffic-express

./: README.md  dijagram_klasa(work_in_progress).xml
TrafficExpress/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
TrafficExpress/headers/: actioncard.h  banditcard.h  bulletcard.h  card.h  deck.h  dialoguebox.h  game.h  hand.h  miniround.h  neutralbullet.h  player.h  playerperspective.h  playerstats.h  roundcard.h  roundcarddeck.h  roundcards.h  serializable.h  sheriff.h  singleplayerstatemachine.h  table.h  train.h  treasure.h  wagon.h
TrafficExpress/headers/client/: playerclient.h
TrafficExpress/headers/collections/: cardcolection.h  miniroundcollection.h  playergroup.h  playerperspectivecollection.h  playerstatscollection.h  roundcardcollection.h  treasurechest.h  wagonarray.h
TrafficExpress/headers/server/: playerserver.h
TrafficExpress/resource/: buttonPaleta.xml  resource.qrc
TrafficExpress/src/: actioncard.cpp  banditcard.cpp  bulletcard.cpp  card.cpp  deck.cpp  dialoguebox.cpp  game.cpp  hand.cpp  miniround.cpp  neutralbullet.cpp  player.cpp  playerperspective.cpp  playerstats.cpp  roundcard.cpp  roundcarddeck.cpp  roundcards.cpp  serializable.cpp  sheriff.cpp  singleplayerstatemachine.cpp  table.cpp  train.cpp  treasure.cpp  wagon.cpp
TrafficExpress/src/client/: playerclient.cpp
TrafficExpress/src/collections/: cardcolection.cpp  miniroundcollection.cpp  playergroup.cpp  playerperspectivecollection.cpp  playerstatscollection.cpp  roundcardcollection.cpp  treasurechest.cpp  wagonarray.cpp
TrafficExpress/src/server/: playerserver.cpp  server.cpp
specification/: documentation.md  useCaseDiagram.drawio.xml
specification/class_diagram/: class_diagram.drawio.xml  class_diagram.xml
specification/component_diagram/: component_diagram.vpd
specification/use_cases/: use_cases.md
specification/use_cases/igranje_jedne_partije_igre/: igranje_jedne_partije_igre.md  igranje_jedne_partije_igre.vpd
specification/use_cases/inicijalizacija_jedne_partije/: inicijalizacija_jedne_partije.md  inicijalizacija_jedne_partije.vpd
specification/use_cases/povezivanje_na_server/: povezivanje_na_server.md
specification/use_cases/prikazivanje_pravila_igre/: prikazivanje_pravila_igre.md  prikazivanje_pravila_igre.vpd
specification/use_cases/prikazivanje_rang_liste/: prikazivanje_rang_liste.md  prikazivanje_rang_liste.vpd
tests/: card.cpp  player.cpp  playerStats.cpp  table.cpp  traffic_express_tests.cpp  train.cpp  wagon.cpp
